🔒 Update route restrictions
- Some api/account need auth
- Restrict front-end path of entities to ADMIN
- USER can no longer access api/* back-end

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -29,7 +29,7 @@
         </li>
         <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
         <li
-          *ngSwitchCase="true"
+          *ngIf="account !== null && account.authorities?.includes(Authority.ADMIN)"
           ngbDropdown
           class="nav-item dropdown pointer"
           display="dynamic"
