--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -23,6 +23,12 @@ Navbar
   }
 }
 
+.active > .nav-link {
+  color: #d5d6d7;
+  background-color: #2f343a;
+  border-radius: 0.5rem;
+}
+
 /* ==========================================================================
 Logo styles
 ========================================================================== */
