--- a/src/main/webapp/content/scss/_bootstrap-variables.scss
+++ b/src/main/webapp/content/scss/_bootstrap-variables.scss
@@ -27,9 +27,12 @@ $enable-print-styles: true;
 // Components:
 // Define common padding and border radius sizes and more.
 
-$border-radius: 0.15rem;
-$border-radius-lg: 0.125rem;
-$border-radius-sm: 0.1rem;
+//$border-radius: 0.15rem;
+$border-radius: 0.5rem;
+//$border-radius-lg: 0.125rem;
+$border-radius-lg: 0.25rem;
+//$border-radius-sm: 0.1rem;
+$border-radius-sm: 0.25rem;
 
 // Body:
 // Settings for the `<body>` element.
