✨ Add Games detail
- Add the feature games-detail
- Update games-list features
- Update Titles
- Update Games fake-data

--- a/src/main/webapp/app/gamer-squad/games/components/games-list/games-list.component.html
+++ b/src/main/webapp/app/gamer-squad/games/components/games-list/games-list.component.html
@@ -2,15 +2,16 @@
   <jhi-alert></jhi-alert>
   <jhi-alert-error></jhi-alert-error>
 
-  <h1>Games</h1>
-
+  <h1 class="text-center display-5">Games</h1>
   <hr />
 
-  <div class="alert alert-warning" *ngIf="(games$ | async)?.length === 0">
-    <span>Aucun Game trouvé</span>
-  </div>
+  <ng-container [ngSwitch]="isEmpty">
+    <div class="alert alert-warning" *ngSwitchCase="true">
+      <span>Aucun Game trouvé</span>
+    </div>
 
-  <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 g-3">
-    <app-games-list-item class="col" *ngFor="let game of games$ | async" [game]="game"> </app-games-list-item>
-  </div>
+    <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 g-3" *ngSwitchCase="false">
+      <app-games-list-item class="col" *ngFor="let game of games$ | async" [game]="game"> </app-games-list-item>
+    </div>
+  </ng-container>
 </div>
