--- a/src/main/webapp/app/gamer-squad/games/components/games-list-item/games-list-item.component.html
+++ b/src/main/webapp/app/gamer-squad/games/components/games-list-item/games-list-item.component.html
@@ -1,6 +1,8 @@
-<div class="card h-100">
-  <img class="card-img-top" *ngIf="game.imgUrl as imgUrl" [src]="imgUrl" [alt]="game.title" />
-  <div class="card-body text-center">
-    <h5 class="card-title">{{ game.title }}</h5>
+<a [routerLink]="['/games', game.id]">
+  <div class="card h-100">
+    <img class="card-img-top" *ngIf="game.imgUrl as imgUrl" [src]="imgUrl" [alt]="game.title" />
+    <div class="card-body text-center">
+      <h5 class="card-title">{{ game.title }}</h5>
+    </div>
   </div>
-</div>
+</a>
