--- a/src/main/webapp/app/gamer-squad/games/components/games-list-item/games-list-item.component.scss
+++ b/src/main/webapp/app/gamer-squad/games/components/games-list-item/games-list-item.component.scss
@@ -1,5 +1,46 @@
+@import 'node_modules/bootstrap/scss/functions';
+@import 'node_modules/bootstrap/scss/variables';
+@import 'node_modules/bootstrap/scss/mixins';
+
 img {
   height: 400px;
   width: auto;
   object-fit: cover;
+}
+
+a {
+  text-decoration: none;
+  color: var(--bs-body-color);
+}
+.card {
+  transition: z-index 0.2s 0.3s, 0.2s ease;
+  z-index: 0;
+  position: relative;
+}
+
+.card::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  opacity: 0.7;
+  box-shadow: 0 0.75rem 1.5rem 0 rgba(0, 0, 0, 0.8);
+  border-radius: var(--bs-card-inner-border-radius);
+  transition: opacity 0.2s ease;
+}
+
+.card:hover::after {
+  transition: opacity 0.2s ease;
+  opacity: 1;
+}
+
+.card:hover {
+  transition: 0.2s ease;
+  transform: scale(1.15);
+  z-index: 1;
+}
+
+@include media-breakpoint-down(sm) {
+  img {
+    height: 300px;
+  }
 }
