--- a/src/main/webapp/app/layouts/error/error.component.html
+++ b/src/main/webapp/app/layouts/error/error.component.html
@@ -1,15 +1,10 @@
-<div>
-  <div class="row">
-    <div class="col-md-4">
-      <span class="hipster img-fluid rounded"></span>
-    </div>
+<div class="container">
+  <h1 jhiTranslate="error.title">Page d'erreur !</h1>
 
-    <div class="col-md-8">
-      <h1 jhiTranslate="error.title">Page d'erreur !</h1>
-
-      <div *ngIf="errorMessage">
-        <div class="alert alert-danger">{{ errorMessage }}</div>
-      </div>
-    </div>
+  <div *ngIf="errorMessage">
+    <div class="alert alert-danger">{{ errorMessage }}</div>
+  </div>
+  <div class="text-center">
+    <span class="hipster img-fluid rounded"></span>
   </div>
 </div>
