✨ Add list of users sub to a game

--- a/src/main/webapp/app/gamer-squad/games/components/games-detail/games-detail.component.html
+++ b/src/main/webapp/app/gamer-squad/games/components/games-detail/games-detail.component.html
@@ -2,7 +2,7 @@
   <jhi-alert></jhi-alert>
   <jhi-alert-error></jhi-alert-error>
 
-  <ng-container *ngIf="game$ | async as game">
+  <ng-container *ngIf="game$ | async as game" [ngSwitch]="isSubscribed$ | async">
     <h1>{{ game.title }}</h1>
     <hr />
     <div class="card">
@@ -16,7 +16,7 @@
           </div>
         </div>
       </div>
-      <div class="card-footer" [ngSwitch]="isSubscribed$ | async">
+      <div class="card-footer">
         <div class="row justify-content-between align-items-center" *ngSwitchCase="true">
           <div class="col-12 col-sm-6">
             <fa-icon class="text-success" icon="heart-circle-check"></fa-icon>
@@ -36,6 +36,26 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div *ngSwitchCase="true">
+      <div class="menu text-center bg-body py-1 mt-3">
+        <button
+          type="button"
+          class="btn btn-outline-secondary m-2 p-2"
+          [class.active]="activeMenu === 'players'"
+          (click)="onMenu('players')"
+        >
+          Players
+        </button>
+        <button type="button" class="btn btn-outline-secondary m-2 p-2" [class.active]="activeMenu === 'events'" (click)="onMenu('events')">
+          Events
+        </button>
+      </div>
+
+      <app-appusers-list *ngIf="activeMenu === 'players'" [gameId]="game.id"></app-appusers-list>
+
+      <div class="text-center m-3" *ngIf="activeMenu === 'events'">🚧 En Construction !</div>
     </div>
   </ng-container>
 </div>
