✨ Update players in games
- Using PlayerFriendshipDTO

--- a/src/main/webapp/app/gamer-squad/games/components/appusers-list-item/appusers-list-item.component.html
+++ b/src/main/webapp/app/gamer-squad/games/components/appusers-list-item/appusers-list-item.component.html
@@ -1,3 +1,3 @@
 <div class="card">
-  <div class="card-body">{{ appUser.internalUser?.login | titlecase }}</div>
+  <div class="card-body">{{ player.userLogin | titlecase }}</div>
 </div>
