--- a/src/main/webapp/app/gamer-squad/games/components/games-detail/games-detail.component.scss
+++ b/src/main/webapp/app/gamer-squad/games/components/games-detail/games-detail.component.scss
@@ -3,7 +3,7 @@
 @import 'node_modules/bootstrap/scss/mixins';
 
 img {
-  border-radius: var(--bs-card-inner-border-radius) 0 0 var(--bs-card-inner-border-radius);
+  border-radius: var(--bs-card-inner-border-radius) 0 0 0;
 }
 
 .menu {
