--- a/src/main/webapp/app/gamer-squad/friends/components/friends-list-item/friends-list-item.component.html
+++ b/src/main/webapp/app/gamer-squad/friends/components/friends-list-item/friends-list-item.component.html
@@ -1,3 +1,46 @@
-<div class="card mt-1">
-  <div class="card-body">{{ friend.userLogin | titlecase }}</div>
+<div class="card">
+  <div class="card-body">
+    <div class="row">
+      <div class="col my-1">{{ friend.userLogin | titlecase }}</div>
+
+      <!-- Icon Friends -->
+      <div *ngIf="friend.accepted" class="col-auto my-1" data-gs-tooltip="Ami">
+        <fa-icon class="text-success" icon="user-group"></fa-icon>
+      </div>
+
+      <!-- Icon Pending -->
+      <div *ngIf="!friend.accepted" class="col-auto my-1" data-gs-tooltip="En attente de confirmation">
+        <fa-icon class="text-warning" icon="user-clock"></fa-icon>
+      </div>
+
+      <!-- Button Delete -->
+      <button
+        *ngIf="friend.accepted || friend.received"
+        class="btn btn-danger text-white btn-sm col-auto me-2"
+        data-gs-tooltip="Supprimer"
+        (click)="onDelete(friend)"
+      >
+        <fa-icon icon="user-slash"></fa-icon>
+      </button>
+    </div>
+  </div>
+
+  <div *ngIf="!friend.accepted && friend.owned" class="card-footer">
+    <!-- Buttons for demands -->
+    <div class="row">
+      <!-- Accept -->
+      <div class="col-6 text-center">
+        <button class="btn btn-success text-white btn-sm me-2" (click)="onAccept(friend)">
+          <fa-icon icon="user-plus" class="me-1"></fa-icon>Accepter
+        </button>
+      </div>
+
+      <!-- Refuse -->
+      <div class="col-6 text-center">
+        <button class="btn btn-danger text-white col btn-sm me-2" (click)="onRefuse(friend)">
+          <fa-icon icon="user-slash" class="me-1"></fa-icon>Refuser
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
