--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -11,7 +11,7 @@ h1,
 h2,
 h3,
 h4 {
-  font-weight: 300;
+  font-weight: 400;
 }
 
 /* Increase contrast of links to get 100% on Lighthouse Accessability Audit. Override this color if you want to change the link color, or use a Bootswatch theme */
@@ -236,4 +236,69 @@ angular-cli removes postcss-rtl processed inline css, processed rules must be ad
     }
   }
 }
+
+/* ===================================================================
+  ------------------   Gamer Squad tweaks   --------------------------
+====================================================================== */
+
+/* ===========================
+    Gamer Squad ToolTips :
+    ex: data-gs-tooltip="..."
+============================== */
+[data-gs-tooltip] {
+  position: relative;
+  display: inline-block;
+}
+
+[data-gs-tooltip]::before,
+[data-gs-tooltip]::after {
+  --tooltip-color: #212529;
+  --arrow-size: 8px;
+  --scale: 0;
+  opacity: 0;
+  position: absolute;
+  top: -0.15rem;
+  left: 50%;
+  transform: translateX(-50%) translateY(var(--translate-y, 0)) scale(var(--scale));
+  transition: opacity 0.2s, transform 0.2s;
+  z-index: 1;
+}
+
+[data-gs-tooltip]::before {
+  --translate-y: calc(-100% - var(--arrow-size));
+  content: attr(data-gs-tooltip);
+  text-align: center;
+  background: var(--tooltip-color);
+  color: white;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  width: max-content;
+  max-width: 250px;
+  transform-origin: bottom center;
+}
+
+[data-gs-tooltip]::after {
+  --translate-y: calc(-1 * var(--arrow-size));
+  content: '';
+  border: var(--arrow-size) solid transparent;
+  border-top-color: var(--tooltip-color);
+  transform-origin: top center;
+}
+
+[data-gs-tooltip]:hover::before,
+[data-gs-tooltip]:hover::after {
+  --scale: 1;
+  opacity: 1;
+  visibility: visible;
+}
+
+/* ===========================
+            Modal
+============================== */
+.gs-modal .modal-dialog {
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* jhipster-needle-scss-add-main JHipster will add new css style */
