--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -10,7 +10,11 @@
 
     <div [ngSwitch]="account !== null">
       <div class="alert alert-success" *ngSwitchCase="true">
-        <span id="home-logged-message" *ngIf="account" jhiTranslate="home.logged.message" [translateValues]="{ username: account.login }"
+        <span
+          id="home-logged-message"
+          *ngIf="account"
+          jhiTranslate="home.logged.message"
+          [translateValues]="{ username: account.login | titlecase }"
           >Vous êtes connecté en tant que "{{ account.login }}".</span
         >
       </div>
