--- a/src/main/webapp/app/gamer-squad/friends/components/friends-list/friends-list.component.html
+++ b/src/main/webapp/app/gamer-squad/friends/components/friends-list/friends-list.component.html
@@ -3,11 +3,11 @@
   <jhi-alert-error></jhi-alert-error>
 
   <h1 class="text-center display-5">Amis</h1>
-  <hr />
 
   <!-- Received -->
   <ng-container *ngIf="receivedFriends">
-    <h2 class="mt-3">Demandes</h2>
+    <h2>Demandes</h2>
+    <hr />
     <div class="row g-2 mt-2">
       <ng-container *ngFor="let friend of receivedFriends">
         <app-friends-list-item
@@ -23,7 +23,8 @@
 
   <!-- Pending -->
   <ng-container *ngIf="pendingFriends">
-    <h2 class="mt-3">En attente</h2>
+    <h2>En attente</h2>
+    <hr />
     <div class="row g-2 mt-2">
       <ng-container *ngFor="let friend of pendingFriends">
         <app-friends-list-item class="col-sm-6 col-lg-4 col-xl-3" [friend]="friend" (friendshipDeleteEvent)="onFriendshipDelete($event)">
@@ -34,7 +35,8 @@
 
   <!-- Friends -->
   <ng-container *ngIf="friends">
-    <h2 class="mt-3">Vos amis</h2>
+    <h2>Vos amis</h2>
+    <hr />
     <div class="row g-2 mt-2">
       <ng-container *ngFor="let friend of friends">
         <app-friends-list-item class="col-sm-6 col-lg-4 col-xl-3" [friend]="friend" (friendshipDeleteEvent)="onFriendshipDelete($event)">
