--- a/src/main/webapp/app/gamer-squad/games/components/games-detail/games-detail.component.html
+++ b/src/main/webapp/app/gamer-squad/games/components/games-detail/games-detail.component.html
@@ -18,20 +18,20 @@
       </div>
       <div class="card-footer">
         <div class="row justify-content-between align-items-center" *ngSwitchCase="true">
-          <div class="col-12 col-sm-6">
+          <div class="col">
             <fa-icon class="text-success" icon="heart-circle-check"></fa-icon>
             Vous êtes abonné(e)
           </div>
-          <div class="col-12 col-sm-6 text-end">
+          <div class="col-auto">
             <button type="button" class="btn btn-danger btn-sm" (click)="unsubscribe()">Se désabonner</button>
           </div>
         </div>
         <div class="row justify-content-between align-items-center" *ngSwitchCase="false">
-          <div class="col-12 col-sm-6">
+          <div class="col">
             <fa-icon class="text-secondary" icon="heart-circle-xmark"></fa-icon>
             Vous n'êtes pas abonné(e)
           </div>
-          <div class="col-12 col-sm-6 text-end">
+          <div class="col-auto">
             <button type="button" class="btn btn-success btn-sm" (click)="subscribe()">S'abonner</button>
           </div>
         </div>
@@ -39,7 +39,7 @@
     </div>
 
     <div *ngSwitchCase="true">
-      <ul class="nav nav-tabs mt-3">
+      <ul class="nav nav-tabs my-3">
         <li class="nav-item">
           <span class="nav-link" [class.active]="activeMenu === 'players'" (click)="onMenu('players')"> Joueurs </span>
         </li>
