--- a/src/main/webapp/app/gamer-squad/games/components/players-list-item/players-list-item.component.html
+++ b/src/main/webapp/app/gamer-squad/games/components/players-list-item/players-list-item.component.html
@@ -1,21 +1,29 @@
 <div class="card">
-  <div class="card-body row justify-content-between">
-    <div class="col my-1">{{ player.userLogin | titlecase }}</div>
+  <div class="card-body row justify-content-between align-items-center">
+    <div *ngIf="!player.userImageUrl" class="avatar-cropper col-auto">
+      <img src="/content/images/default/avatar.png" class="avatar-image" alt="Avatar" />
+    </div>
+
+    <div *ngIf="player.userImageUrl" class="avatar-cropper col-auto">
+      <img [src]="player.userImageUrl" class="avatar-image" alt="Avatar" />
+    </div>
+
+    <div class="col m-2">{{ player.userLogin | titlecase }}</div>
 
     <!-- Btn and icons -->
 
     <!-- Friends -->
-    <div class="col-auto my-1" *ngIf="player.friendshipId && player.accepted === true">
+    <div *ngIf="player.friendshipId && player.accepted === true" class="col-auto my-1" data-gs-tooltip="Amis">
       <fa-icon class="text-success" icon="user-group"></fa-icon>
     </div>
 
     <!-- Pending -->
-    <div class="col-auto my-1" *ngIf="player.friendshipId && player.accepted === false">
+    <div *ngIf="player.friendshipId && player.accepted === false" class="col-auto my-1" data-gs-tooltip="En attente de confirmation">
       <fa-icon class="text-warning" icon="user-clock"></fa-icon>
     </div>
 
     <!-- Not Friends -->
-    <button class="btn btn-success text-white btn-sm col-auto me-2" *ngIf="!player.friendshipId" (click)="onFriendshipDemand()">
+    <button *ngIf="!player.friendshipId" class="btn btn-success text-white btn-sm col-auto me-1" (click)="onFriendshipDemand()">
       <fa-icon icon="user-plus"></fa-icon>
       Demande
     </button>
