💥 Add sender(AppUser) to FriendshipChat entity
JDL :
- FriendshipChat{sender(id) required} to AppUser

--- a/src/main/webapp/app/entities/friendship-chat/detail/friendship-chat-detail.component.html
+++ b/src/main/webapp/app/entities/friendship-chat/detail/friendship-chat-detail.component.html
@@ -28,6 +28,12 @@
             <a [routerLink]="['/friendship', friendshipChat.friendship.id, 'view']">{{ friendshipChat.friendship.id }}</a>
           </div>
         </dd>
+        <dt><span jhiTranslate="gamerSquadApp.friendshipChat.sender">Sender</span></dt>
+        <dd>
+          <div *ngIf="friendshipChat.sender">
+            <a [routerLink]="['/app-user', friendshipChat.sender.id, 'view']">{{ friendshipChat.sender.id }}</a>
+          </div>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
