--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -43,8 +43,8 @@ Navbar
 Avatar
 ========================================================================== */
 .avatar-cropper {
-  height: 32px;
-  width: 32px;
+  height: 32px !important;
+  width: 32px !important;
   margin-right: 0.5rem;
 }
 
