✨ Add friends chat send message

--- a/src/main/webapp/app/gamer-squad/friend-chats/components/friend-chats-list/friend-chats-list.component.html
+++ b/src/main/webapp/app/gamer-squad/friend-chats/components/friend-chats-list/friend-chats-list.component.html
@@ -3,17 +3,45 @@
 
   <jhi-alert></jhi-alert>
 
-  <ng-container *ngIf="playerChats$ | async as playerChats">
-    <ng-container *ngIf="playerChats.length !== 0; else noContent">
-      <ng-container *ngFor="let playerChat of playerChats">
-        <app-friend-chats-list-item [playerChat]="playerChat"> </app-friend-chats-list-item>
+  <h1>Chat avec USERNAME</h1>
+  <hr />
+
+  <div #messageContainer class="messages-container" (scroll)="onScroll()">
+    <ng-container *ngIf="playerChats">
+      <ng-container *ngIf="playerChats.length !== 0; else noContent">
+        <ng-container *ngFor="let playerChat of playerChats">
+          <app-friend-chats-list-item [playerChat]="playerChat"> </app-friend-chats-list-item>
+        </ng-container>
       </ng-container>
     </ng-container>
-  </ng-container>
 
-  <ng-template #noContent>
-    <div class="card text-center">
-      <div class="card-body">Aucun messages</div>
-    </div>
-  </ng-template>
+    <ng-template #noContent>
+      <div class="card text-center">
+        <div class="card-body">Aucun messages</div>
+      </div>
+    </ng-template>
+  </div>
+
+  <hr />
+
+  <div class="card card-form text-bg-light">
+    <form class="form" role="form" (ngSubmit)="OnNewMessage()" [formGroup]="friendMessageForm">
+      <div class="card-header">
+        <label for="message">Envoyer un message :</label>
+      </div>
+
+      <div class="card-body">
+        <textarea class="form-control" type="text" name="message" id="message" formControlName="message" placeholder="Votre message...">
+        </textarea>
+
+        <small class="form-text text-danger" *ngIf="friendMessageForm.get('message')?.errors?.maxlength">
+          Votre message ne doit pas comporter plus de 512 caractères.
+        </small>
+      </div>
+
+      <div class="card-footer text-end">
+        <button type="submit" [disabled]="friendMessageForm.invalid" class="btn btn-primary">Envoyer</button>
+      </div>
+    </form>
+  </div>
 </div>
