--- a/src/main/webapp/app/gamer-squad/friend-chats/components/friend-chats-list-item/friend-chats-list-item.component.html
+++ b/src/main/webapp/app/gamer-squad/friend-chats/components/friend-chats-list-item/friend-chats-list-item.component.html
@@ -1,6 +1,8 @@
 <div class="card my-2" [ngClass]="isSender ? 'sender' : 'receiver'">
   <div class="card-header">
     <small class="text-muted">
+      <span *ngIf="isSender">Vous : </span>
+      <span *ngIf="!isSender">{{ playerChat.senderUserLogin | titlecase }} : </span>
       {{ playerChat.friendshipChatSendAt | gsDatetimeChat }}
       <!--        GSTest : {{ dayjs('12/12/2023 10:55:00', 'DD/MM/YYYY HH:mm:ss') | gsDatetimeChat }}-->
     </small>
