--- a/src/main/webapp/app/gamer-squad/friend-chats/components/friend-chats-list/friend-chats-list.component.html
+++ b/src/main/webapp/app/gamer-squad/friend-chats/components/friend-chats-list/friend-chats-list.component.html
@@ -3,7 +3,16 @@
 
   <jhi-alert></jhi-alert>
 
-  <h1>Chat avec USERNAME</h1>
+  <h1 class="row align-items-center justify-content-center">
+    <div class="avatar-cropper col-auto">
+      <img *ngIf="!playerFriend.userImageUrl" src="/content/images/default/avatar.png" class="avatar-image" alt="Avatar" />
+      <img *ngIf="playerFriend.userImageUrl" [src]="playerFriend.userImageUrl" class="avatar-image" alt="Avatar" />
+    </div>
+    <div class="col-auto">
+      {{ playerFriend.userLogin | titlecase }}
+    </div>
+  </h1>
+
   <hr />
 
   <div #messageContainer class="messages-container" (scroll)="onScroll()">
