--- a/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
@@ -22,6 +22,13 @@
             <p class="card-text">{{ event.description }}</p>
           </div>
         </div>
+
+        <div class="mt-3 text-center" *ngIf="event.ownerLogin === userLogin">
+          <a class="btn btn-primary" [routerLink]="['/events', event.id, 'edit']">
+            <fa-icon icon="pen-to-square" class="me-1"></fa-icon>
+            Éditer
+          </a>
+        </div>
       </div>
 
       <div class="col-3">
