--- a/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
@@ -41,5 +41,7 @@
         </div>
       </div>
     </div>
+
+    <app-events-players-list [eventId]="eventId"></app-events-players-list>
   </ng-container>
 </div>
