--- a/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
@@ -3,7 +3,6 @@
   <jhi-alert></jhi-alert>
 
   <h1>Détail de l'évènement</h1>
-
   <hr />
 
   <ng-container *ngIf="event">
@@ -23,10 +22,27 @@
           </div>
         </div>
 
+        <!-- Button : EDIT -->
         <div class="mt-3 text-center" *ngIf="event.ownerLogin === userLogin">
-          <a class="btn btn-primary" [routerLink]="['/events', event.id, 'edit']">
+          <a class="btn btn-primary text-white" [routerLink]="['/events', event.id, 'edit']">
             <fa-icon icon="pen-to-square" class="me-1"></fa-icon>
             Éditer
+          </a>
+        </div>
+
+        <!-- Button : SUBSCRIBE -->
+        <div class="mt-3 text-center" *ngIf="userLogin !== event.ownerLogin && !isAlreadySub">
+          <a class="btn btn-success text-white" (click)="onSubscribe()">
+            <fa-icon icon="calendar-plus" class="me-1"></fa-icon>
+            S'inscrire
+          </a>
+        </div>
+
+        <!-- Button : UNSUBSCRIBE -->
+        <div class="mt-3 text-center" *ngIf="userLogin !== event.ownerLogin && isAlreadySub">
+          <a class="btn btn-danger text-white" (click)="onUnsubscribe()">
+            <fa-icon icon="calendar-xmark" class="me-1"></fa-icon>
+            Se désinscrire
           </a>
         </div>
       </div>
@@ -42,6 +58,6 @@
       </div>
     </div>
 
-    <app-events-players-list [eventId]="eventId"></app-events-players-list>
+    <app-events-players-list [players]="players"></app-events-players-list>
   </ng-container>
 </div>
