--- a/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
@@ -22,11 +22,17 @@
           </div>
         </div>
 
-        <!-- Button : EDIT -->
+        <!-- Buttons display for owner -->
         <div class="mt-3 text-center" *ngIf="event.ownerLogin === userLogin">
+          <!-- Button : EDIT -->
           <a class="btn btn-primary text-white" [routerLink]="['/events', event.id, 'edit']">
             <fa-icon icon="pen-to-square" class="me-1"></fa-icon>
             Éditer
+          </a>
+          <!-- Button : INVITE FRIENDS -->
+          <a class="btn btn-success text-white ms-3" (click)="onInviteFriendsModal()">
+            <fa-icon icon="user-plus" class="me-1"></fa-icon>
+            Inviter des amis
           </a>
         </div>
 
