--- a/src/main/webapp/app/gamer-squad/events/components/my-events-pending-list-item/my-events-pending-list-item.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/my-events-pending-list-item/my-events-pending-list-item.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <div class="card-footer">
-    <div class="row justify-content-between align-items-center m-0">
+    <div class="row justify-content-between align-items-center m-0 gap-2">
       <div *ngIf="!event.ownerImgUrl" class="avatar-cropper col-auto">
         <img src="/content/images/default/avatar.png" class="avatar-image" alt="Avatar" />
       </div>
@@ -23,9 +23,19 @@
 
       <div class="col">{{ event.ownerLogin | titlecase }}</div>
 
-      <a [routerLink]="['/events', event.id]" class="btn btn-primary text-white col-auto">
+      <div *ngIf="event.private" class="col-auto"><fa-icon icon="lock" class="me-2"></fa-icon>Privé</div>
+
+      <a *ngIf="!event.private" [routerLink]="['/events', event.id]" class="btn btn-primary text-white col-auto">
         <fa-icon class="me-2" icon="eye"></fa-icon>Voir
       </a>
+
+      <button class="btn btn-success text-white col-auto" (click)="onAcceptInvite()">
+        <fa-icon icon="check" class="me-2"></fa-icon>Accepter
+      </button>
+
+      <button class="btn btn-danger text-white col-auto" (click)="onRefuseInvite()">
+        <fa-icon icon="xmark" class="me-2"></fa-icon>Refuser
+      </button>
     </div>
   </div>
 </div>
