--- a/src/main/webapp/app/gamer-squad/events/components/my-events-pending-list/my-events-pending-list.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/my-events-pending-list/my-events-pending-list.component.html
@@ -1,5 +1,17 @@
 <h2>À venir</h2>
-<app-my-events-pending-list-item *ngFor="let event of afterNowEvents" [event]="event"> </app-my-events-pending-list-item>
+<app-my-events-pending-list-item
+  *ngFor="let event of afterNowEvents"
+  [event]="event"
+  (acceptInviteEvent)="onAcceptInvite($event)"
+  (refuseInviteEvent)="onRefuseInvite($event)"
+>
+</app-my-events-pending-list-item>
 
 <h2>Passés</h2>
-<app-my-events-pending-list-item *ngFor="let event of beforeNowEvents" [event]="event"> </app-my-events-pending-list-item>
+<app-my-events-pending-list-item
+  *ngFor="let event of beforeNowEvents"
+  [event]="event"
+  (acceptInviteEvent)="onAcceptInvite($event)"
+  (refuseInviteEvent)="onRefuseInvite($event)"
+>
+</app-my-events-pending-list-item>
